API 수정 및 장바구니에 아이템 중복 추가 시 수량 update로 처리