@@ -38,7 +38,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
         properties = {"spring.config.location=classpath:application-test.yml"})
 class CartControllerTest {
 
-    private final String BASE_URL = "/api/v1/users/{userId}/cart";
+    private final String BASE_URL = "/api/v1/cart";
 
     @Autowired
     MockMvc mockMvc;
@@ -52,39 +52,6 @@ class CartControllerTest {
     @Test
     void getCart() throws Exception {
 
-        // given
-        Item item = mock(Item.class);
-        User user = mock(User.class);
-        CartItem cartItem = CartItem.builder()
-                .cartItemId(1L)
-                .item(item)
-                .itemName("item1")
-                .itemDescription("item1_desc")
-                .orderPrice(10000)
-                .orderCount(2)
-                .user(user)
-                .build();
-        List<CartItem> cartItemList = List.of(cartItem);
-        doReturn(cartItemList)
-                .when(cartItemService).getCartItemListByUserId(1L);
-        doReturn(3000)
-                .when(deliveryFeeService).getDeliveryFee(cartItemList);
-        // when
-        mockMvc.perform(get(BASE_URL, 1L))
-                .andDo(print())
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.code").value("SUCCESS"))
-                .andExpect(jsonPath("$.result").exists())
-                .andExpect(jsonPath("$.result.cartItemList").value(Matchers.hasSize(1)))
-                .andExpect(jsonPath("$.result.orderAmount").value(20000))
-                .andExpect(jsonPath("$.result.deliveryFee").value(3000));
-        // then
-        verify(cartItemService).getCartItemListByUserId(1L);
-        verify(deliveryFeeService).getDeliveryFee(cartItemList);
-    }
-
-    @Test
-    void addItem() throws Exception {
         // given
         Item item1 = mock(Item.class);
         Item item2 = mock(Item.class);
@@ -112,17 +79,12 @@ class CartControllerTest {
                 .when(cartItemService).getCartItemListByUserId(1L);
         doReturn(3000)
                 .when(deliveryFeeService).getDeliveryFee(cartItemList);
-        doReturn(cartItem2)
-                .when(cartItemService).addItem(1L, 2L);
-
         // when
-        CreateCartItemRequest createCartItemRequest = new CreateCartItemRequest(2L);
-        mockMvc.perform(post(BASE_URL + "/items", 1L)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(createCartItemRequest)))
+        mockMvc.perform(get(BASE_URL)
+                        .param("userId", String.valueOf(1L)))
                 .andDo(print())
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.code").value("CREATED"))
+                .andExpect(jsonPath("$.code").value("SUCCESS"))
                 .andExpect(jsonPath("$.result").exists())
                 .andExpect(jsonPath("$.result.cartItemList").value(Matchers.hasSize(2)))
                 .andExpect(jsonPath("$.result.orderAmount").value(30000))
@@ -130,9 +92,44 @@ class CartControllerTest {
         // then
         verify(cartItemService).getCartItemListByUserId(1L);
         verify(deliveryFeeService).getDeliveryFee(cartItemList);
-        verify(cartItemService).addItem(1L, 2L);
     }
 
+    @Test
+    void addItem() throws Exception {
+        // given
+        Item item2 = mock(Item.class);
+        User user = mock(User.class);
+        CartItem cartItem2 = CartItem.builder()
+                .cartItemId(2L)
+                .item(item2)
+                .itemName("item2")
+                .itemDescription("item2_desc")
+                .orderPrice(5000)
+                .orderCount(2)
+                .user(user)
+                .build();
+        doReturn(cartItem2)
+                .when(cartItemService).addItem(1L, 2L);
+
+        // when
+        CreateCartItemRequest createCartItemRequest = new CreateCartItemRequest(2L);
+        mockMvc.perform(post(BASE_URL + "/items")
+                        .param("userId", String.valueOf(1L))
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(createCartItemRequest)))
+                .andDo(print())
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.code").value("CREATED"))
+                .andExpect(jsonPath("$.result").exists())
+                .andExpect(jsonPath("$.result.itemName").value("item2"))
+                .andExpect(jsonPath("$.result.itemDescription").value("item2_desc"))
+                .andExpect(jsonPath("$.result.orderPrice").value(5000))
+                .andExpect(jsonPath("$.result.orderCount").value(2))
+                .andExpect(jsonPath("$.result.totalOrderPrice").value(10000));
+        // then
+        verify(cartItemService).addItem(1L, 2L);
+    }
+/*
     @DisplayName("똑같은 아이템을 두 번 넣는 경우")
     @Test
     void add_existedItem() throws Exception {
@@ -142,7 +139,8 @@ class CartControllerTest {
 
         // when
         CreateCartItemRequest createCartItemRequest = new CreateCartItemRequest(2L);
-        mockMvc.perform(post(BASE_URL + "/items", 1L)
+        mockMvc.perform(post(BASE_URL + "/items")
+                        .param("userId", String.valueOf(1L))
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(createCartItemRequest)))
                 .andDo(print())
@@ -153,7 +151,7 @@ class CartControllerTest {
                 .andExpect(jsonPath("$.result.cause").value("Duplicated"));
         // then
         verify(cartItemService).addItem(1L, 2L);
-    }
+    }*/
 
     @Test
     void updateCount() throws Exception {
@@ -169,127 +167,77 @@ class CartControllerTest {
                 .orderCount(4)
                 .user(user)
                 .build();
-        List<CartItem> cartItemList = Arrays.asList(cartItem);
-        doReturn(cartItemList)
-                .when(cartItemService).getCartItemListByUserId(1L);
-        doReturn(3000)
-                .when(deliveryFeeService).getDeliveryFee(cartItemList);
         doReturn(cartItem)
                 .when(cartItemService).updateCount(1L, 1L, 4);
 
         // when
         UpdateCartItemCountRequest updateCartItemCountRequest = new UpdateCartItemCountRequest(1L, 4);
-        mockMvc.perform(patch(BASE_URL + "/items", 1L)
+        mockMvc.perform(patch(BASE_URL + "/items")
+                        .param("userId", String.valueOf(1L))
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(updateCartItemCountRequest)))
                 .andDo(print())
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.code").value("SUCCESS"))
                 .andExpect(jsonPath("$.result").exists())
-                .andExpect(jsonPath("$.result.cartItemList").value(Matchers.hasSize(1)))
-                .andExpect(jsonPath("$.result.orderAmount").value(40000))
-                .andExpect(jsonPath("$.result.deliveryFee").value(3000));
+                .andExpect(jsonPath("$.result.itemName").value("item1"))
+                .andExpect(jsonPath("$.result.itemDescription").value("item1_desc"))
+                .andExpect(jsonPath("$.result.orderPrice").value(10000))
+                .andExpect(jsonPath("$.result.orderCount").value(4))
+                .andExpect(jsonPath("$.result.totalOrderPrice").value(40000));
         // then
-        verify(cartItemService).getCartItemListByUserId(1L);
-        verify(deliveryFeeService).getDeliveryFee(cartItemList);
         verify(cartItemService).updateCount(1L, 1L, 4);
     }
 
     @Test
     void removeItem() throws Exception {
         // given
-        Item item = mock(Item.class);
-        User user = mock(User.class);
-        CartItem cartItem = CartItem.builder()
-                .cartItemId(1L)
-                .item(item)
-                .itemName("item1")
-                .itemDescription("item1_desc")
-                .orderPrice(10000)
-                .orderCount(2)
-                .user(user)
-                .build();
-        List<CartItem> cartItemList = Arrays.asList(cartItem);
-        doReturn(cartItemList)
-                .when(cartItemService).getCartItemListByUserId(1L);
-        doReturn(3000)
-                .when(deliveryFeeService).getDeliveryFee(cartItemList);
-        doNothing().when(cartItemService).removeItem(1L, 2L);
+        doNothing()
+                .when(cartItemService).removeItem(1L, 2L);
 
         // when
-        mockMvc.perform(delete(BASE_URL + "/items/{cartItemId}", 1L, 2L))
+        mockMvc.perform(delete(BASE_URL + "/items/{cartItemId}", 2L)
+                        .param("userId", String.valueOf(1L)))
                 .andDo(print())
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.code").value("SUCCESS"))
-                .andExpect(jsonPath("$.result").exists())
-                .andExpect(jsonPath("$.result.cartItemList").value(Matchers.hasSize(1)))
-                .andExpect(jsonPath("$.result.orderAmount").value(20000))
-                .andExpect(jsonPath("$.result.deliveryFee").value(3000));
+                .andExpect(jsonPath("$.result").doesNotExist());
         // then
-        verify(cartItemService).getCartItemListByUserId(1L);
-        verify(deliveryFeeService).getDeliveryFee(cartItemList);
         verify(cartItemService).removeItem(1L, 2L);
     }
 
     @Test
     void removeItems() throws Exception {
         // given
-        Item item = mock(Item.class);
-        User user = mock(User.class);
-        CartItem cartItem = CartItem.builder()
-                .cartItemId(1L)
-                .item(item)
-                .itemName("item1")
-                .itemDescription("item1_desc")
-                .orderPrice(10000)
-                .orderCount(2)
-                .user(user)
-                .build();
-        List<CartItem> cartItemList = Arrays.asList(cartItem);
-        doReturn(cartItemList)
-                .when(cartItemService).getCartItemListByUserId(1L);
-        doReturn(3000)
-                .when(deliveryFeeService).getDeliveryFee(cartItemList);
-        doNothing().when(cartItemService).removeItems(1L, List.of(2L, 3L));
+        doNothing()
+                .when(cartItemService).removeItems(1L, List.of(2L, 3L));
 
         // when
-        mockMvc.perform(delete(BASE_URL + "/items", 1L)
+        mockMvc.perform(delete(BASE_URL + "/items")
+                        .param("userId", String.valueOf(1L))
                         .param("cartItemIds", String.valueOf(2L), String.valueOf(3L)))
                 .andDo(print())
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.code").value("SUCCESS"))
-                .andExpect(jsonPath("$.result").exists())
-                .andExpect(jsonPath("$.result.cartItemList").value(Matchers.hasSize(1)))
-                .andExpect(jsonPath("$.result.orderAmount").value(20000))
-                .andExpect(jsonPath("$.result.deliveryFee").value(3000));
+                .andExpect(jsonPath("$.result").doesNotExist());
         // then
-        verify(cartItemService).getCartItemListByUserId(1L);
-        verify(deliveryFeeService).getDeliveryFee(cartItemList);
         verify(cartItemService).removeItems(1L, List.of(2L, 3L));
     }
 
     @Test
     void clear() throws Exception {
         // given
-        List<CartItem> cartItemList = Collections.emptyList();
-        doReturn(cartItemList)
-                .when(cartItemService).getCartItemListByUserId(1L);
-        doReturn(3000)
-                .when(deliveryFeeService).getDeliveryFee(cartItemList);
-        doNothing().when(cartItemService).clear(1L);
+        doNothing()
+                .when(cartItemService).clear(1L);
 
         // when
-        mockMvc.perform(delete(BASE_URL, 1L))
+        mockMvc.perform(delete(BASE_URL)
+                        .param("userId", String.valueOf(1L)))
                 .andDo(print())
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.code").value("SUCCESS"))
-                .andExpect(jsonPath("$.result").exists())
-                .andExpect(jsonPath("$.result.cartItemList").value(Matchers.hasSize(0)))
-                .andExpect(jsonPath("$.result.orderAmount").value(0))
-                .andExpect(jsonPath("$.result.deliveryFee").value(3000));
+                .andExpect(jsonPath("$.result").doesNotExist());
         // then
-        verify(cartItemService).getCartItemListByUserId(1L);
-        verify(deliveryFeeService).getDeliveryFee(cartItemList);
         verify(cartItemService).clear(1L);
     }
 }
